--- a/sentinel-dashboard/src/main/webapp/resources/app/scripts/directives/sidebar/sidebar.html
+++ b/sentinel-dashboard/src/main/webapp/resources/app/scripts/directives/sidebar/sidebar.html
@@ -53,14 +53,15 @@
               <i class="glyphicon glyphicon-filter"></i>&nbsp;&nbsp;流控规则</a>
           </li>
 
+
           <li ui-sref-active="active" ng-if="!entry.isGateway">
-            <a ui-sref="dashboard.flowV1({app: entry.app})">
+            <a ui-sref="dashboard.flow({app: entry.app})">
               <i class="glyphicon glyphicon-filter"></i>&nbsp;&nbsp;流控规则</a>
           </li>
 
           <li ui-sref-active="active">
             <a ui-sref="dashboard.degrade({app: entry.app})">
-              <i class="glyphicon glyphicon-flash"></i>&nbsp;&nbsp;熔断规则</a>
+              <i class="glyphicon glyphicon-flash"></i>&nbsp;&nbsp;降级规则</a>
           </li>
           <li ui-sref-active="active" ng-if="!entry.isGateway">
             <a ui-sref="dashboard.paramFlow({app: entry.app})">
